--- a/main.css
+++ b/main.css
@@ -511,6 +511,7 @@ body {
   background-color: #222;
   max-width: 100vw;
   max-height: 100vh;
+  color: #e5f3ff;
   overflow: hidden;
   font-family: "StellarM" !important;
 }
@@ -523,6 +524,10 @@ button {
   padding: 2em;
 }
 
+h1{
+  font-size: 30px;
+  color: #e5f3ff;
+}
 a{
   font-size: 24px
   margin: 1em;
