--- a/main.css
+++ b/main.css
@@ -512,7 +512,7 @@ body {
   max-width: 100vw;
   max-height: 100vh;
   color: #e5f3ff;
-  overflow-y: scroll;
+  overflow-y: auto;
   font-family: "StellarM" !important;
 }
 
